--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,54 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/next15_app
-/libs
-/node_modules
-/.pnp
+# Dependencies
+node_modules/
+.pnp
 .pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.pnpm-debug.log*
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+# Production builds
 /build
+/dist
+/out
+/.next/
+/public/bundle.*
 
-# misc
+# Environment files
+.env*
+
+# OS generated files
 .DS_Store
-*.pem
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# IDE files
+.vscode/
+.idea/
 
-# vercel
-.vercel
+# Temporary files
+*.tmp
+*.temp
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Testing
+/coverage
+
+# Deployment
+.vercel
