--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify/svelte": "^3.1.4",
     "@onsvisual/svelte-charts": "latest",
     "@onsvisual/svelte-maps": "latest",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@turf/bbox": "^6.5.0",
