--- a/package.json
+++ b/package.json
@@ -22,19 +22,24 @@
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@turf/bbox": "^6.5.0",
+    "autoprefixer": "^10.4.21",
     "core-js": "3",
     "d3-dsv": "latest",
     "debounce": "^1.2.0",
     "gh-pages": "^3.1.0",
     "mapbox-gl": "1.13.1",
     "parse-color": "^1.0.0",
+    "postcss": "^8.5.4",
     "rollup": "^2.3.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "tailwindcss": "^4.1.8",
     "topojson-client": "^3.1.0"
   },
   "dependencies": {
